--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^0.16.2",
     "body-parser": "^1.17.2",
     "express": "^4.15.4",
-    "mongoose": "^4.11.7"
+    "mongoose": "^4.11.7",
+    "yarn": "^1.9.4"
   }
 }
